<resources>
    <string name="app_name">MyFestival</string>
    <string name="newsfeed"> Nieuwsoverzicht </string>
    <string name="food"> Eten &amp; Drinken </string>
    <string name="line_up"> Line-up </string>
    <string name="map"> Kaart </string>
    <string name="menu"> Menu </string>

    <string name="previous_day_button_text">&lt;</string>
    <string name="next_day_button_text">&gt;</string>
    <string name="concert_notify">Notify</string>
    <string name="logo">logo</string>
    <string name="newsfeed_picture">newsfeed_picture</string>
    <string name="diets">diets</string>
    <string name="dish">dish</string>
    <string name="price">price</string>
    <string name="foodstand">foodstand</string>
    <string name="listItem">Item</string>
    <string name="choices">Keuzes:</string>
    <string name="vouchers">Bonnetjes:</string>

    <string name="swipeR">swipe &gt;&gt;</string>
    <string name="swipeL">&lt;&lt; swipe</string>

    <string name="loading">Laden...</string>
    <string name="searchString">naam festival</string>
    <string name="festival">Festival</string>
    <string name="title_activity_maps">Map</string>

    <string name="stages">Podia</string>
    <string name="foodndrinks">Kraampjes</string>
    <string name="entrance">Ingang</string>
    <string name="festicalChooser"> FESTIVAL SELECTIE </string>
</resources>
