<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myfestival.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_homeFragment_to_newsfeedFragment"
            app:destination="@id/newsfeedFragment" />
        <action
            android:id="@+id/action_homeFragment_to_foodFragment"
            app:destination="@id/foodFragment" />
        <action
            android:id="@+id/action_homeFragment_to_lineupFragment"
            app:destination="@id/lineupFragment" />
        <action
            android:id="@+id/action_homeFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsfeedFragment"
        android:name="com.example.myfestival.NewsfeedFragment"
        android:label="@string/newsfeed"
        tools:layout="@layout/newsfeed_fragment" />
    <fragment
        android:id="@+id/foodFragment"
        android:name="com.example.myfestival.FoodFragment"
        android:label="@string/food"
        tools:layout="@layout/food_fragment" >
        <action
            android:id="@+id/action_foodFragment_to_menuFragment"
            app:destination="@id/menuFragment"/>
    </fragment>
    <fragment
        android:id="@+id/lineupFragment"
        android:name="com.example.myfestival.LineupFragment"
        android:label="@string/line_up"
        tools:layout="@layout/lineup_fragment" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.myfestival.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/map_fragment" />
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.myfestival.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/menu_fragment">
        <argument
            android:name="foodstand_id"
            app:argType="string"
            android:defaultValue="pizza" />
        <argument
            android:name="foodstand_img"
            app:argType="integer" />
        <argument
            android:name="foodstand_name"
            app:argType="string"
            android:defaultValue="Foodstand" />
    </fragment>


</navigation>