<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_item_container_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/menu_item_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/menu_dish_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dish"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/menu_dish_diets_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diets"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/menu_dish_price_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>