<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical"
        tools:context=".FoodFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">
            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="683dp"
                android:layout_y="0dp"
                tools:context=".MapsFragment" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="95"
        android:padding="4dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="5dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:id="@+id/ingang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="29dp"
            android:layout_y="694dp"
            android:text="@string/entrance" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="5dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/kraampjes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodndrinks" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="5dp"
            android:background="@color/colorOnBackground"/>
        <TextView
            android:id="@+id/podia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stages" />
    </LinearLayout>



    </LinearLayout>


</layout>